--- a/review/review.vcxproj.filters
+++ b/review/review.vcxproj.filters
@@ -21,10 +21,24 @@
     <ClCompile Include="glad.c">
       <Filter>头文件</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="vertexshader.vert">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="fragment.frag">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="shader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
