--- a/review/review.vcxproj
+++ b/review/review.vcxproj
@@ -141,6 +141,7 @@
     <None Include="vertexshader.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
